[tool.poetry]
name = "lapidary-deviantart"
version = "0.1.0"
description = ""
authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "deviantart", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
lapidary = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
